--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: ci-test
 
 on:
   push:
-    branches: [ Refactoring ]
+    branches: [ * ]
   pull_request:
-    branches: [ Refactoring ]
+    branches: [ * ]
 
 jobs:
 
