--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -1,9 +1,10 @@
 name: Build & Publish
 
 on:
-  workflows: ["Lint & Test"]
-  branches: ["main"]
-  types: ["completed"]
+  workflow_run:
+    workflows: ["Lint & Test"]
+    branches: ["main"]
+    types: ["completed"]
 
 
 jobs:
