fix (devops): Kubernetes auto redeployment (2nd try)

--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -39,14 +39,12 @@ jobs:
       - name: Deploy to Kubernetes
         uses: fjogeleit/yaml-update-action@master
         with:
+          repository: Tech-With-Tim/k8s
+          token: ${{ secrets.REPO_TOKEN }}
+          branch: "main"
+          createPR: "false"
+          updateFile: "true"
+          message: "Redeploy CDN"
           valueFile: "cdn/deployment.yml"
           propertyPath: "spec.template.spec.containers.0.image"
           value: "docker.pkg.github.com/tech-with-tim/cdn/cdn:${{ github.sha }}"
-
-      - name: Push Changes to kubernetes repo
-        run: |
-          git config user.name "mohamed040406"
-          git config user.email "mohamed040406@users.noreply.github.com"
-          git add .
-          git commit -m "Redeploy CDN"
-          git push
