--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -16,13 +16,36 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2 # Checking out the repo
 
-      - name: Build and Publish Docker image
-        uses: VaultVulp/gp-docker-action@1.1.8
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }} # Provide GITHUB_TOKEN to login into the GitHub Packages
-          image-name: cdn # Provide Docker image name
-          image-tag: ${{ github.sha }} # Provide Docker image tag
-          dockerfile: Dockerfile
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASS }}
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Build and Push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: "techwithtim/cdn:${{ github.sha }}"
+          builder: ${{ steps.buildx.outputs.name }}
+          cache-to: type=local,dest=/tmp/.buildx-cache
+          cache-from: type=local,src=/tmp/.buildx-cache
 
   deploy:
     name: Deploy on Kubernetes cluster
@@ -47,4 +70,4 @@ jobs:
           message: "Redeploy CDN"
           valueFile: "cdn/deployment.yml"
           propertyPath: "spec.template.spec.containers.0.image"
-          value: "docker.pkg.github.com/tech-with-tim/cdn/cdn:${{ github.sha }}"
+          value: "techwithtim/cdn:${{ github.sha }}"
