--- a/.dockerignore
+++ b/.dockerignore
@@ -7,7 +7,7 @@
 
 # Test binary, built with `go test -c`
 *.test
-
+.git/
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
