--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -18,8 +18,8 @@ jobs:
 
       - name: Set Up Submodule
         run: |
-          - git submodule init
-          - git submodule update
+          git submodule init
+          git submodule update
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
