--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -43,8 +43,8 @@ jobs:
 
     - name: Set Up Submodule
       run: |
-        - git submodule init
-        - git submodule update
+        git submodule init
+        git submodule update
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
