--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -55,8 +55,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set Up Submodule
         run: |
-          - git submodule init
-          - git submodule update
+          git submodule init
+          git submodule update
 
       - name: Set up Go
         uses: actions/setup-go@v2
