migrate to db url

--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -77,11 +77,7 @@ jobs:
       - name: test
         run: go test -v -p 1 -coverprofile=coverage.txt -covermode=atomic ./...
         env:
-          POSTGRES_USER: root
-          POSTGRES_PASSWORD: mysecret
-          DB_NAME: cdn
-          DB_HOST: localhost
-          DB_PORT: 5432
+          DB_URI: postgres://root:mysecret@localhost:5432/cdn?sslmode=disable
           SECRET_KEY: mysecret
           MAX_FILE_SIZE: 30
           REDIS_HOST: localhost:6379
