--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -66,11 +66,7 @@ jobs:
       - name: Migrate
         run: go run main.go migrate_up
         env:
-          POSTGRES_USER: root
-          POSTGRES_PASSWORD: mysecret
-          DB_NAME: cdn
-          DB_HOST: localhost
-          DB_PORT: 5432
+          DB_URI: postgres://root:mysecret@localhost:5432/cdn?sslmode=disable
           SECRET_KEY: mysecret
           MAX_FILE_SIZE: 30
 
