--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -27,9 +27,9 @@ jobs:
         image: postgres:12
         # Provide the password for postgres
         env:
-          POSTGRES_USER: root
-          POSTGRES_PASSWORD: mysecret
-          POSTGRES_DB: cdn
+          POSTGRES_USER: twt
+          POSTGRES_PASSWORD: twt
+          POSTGRES_DB: twt
         ports:
           - 5432:5432
           # Set health checks to wait until postgres has started
@@ -73,7 +73,7 @@ jobs:
       - name: test
         run: go test -v -p 1 -coverprofile=coverage.txt -covermode=atomic ./...
         env:
-          DB_URI: postgres://root:mysecret@localhost:5432/cdn?sslmode=disable
+          DB_URI: postgres://twt:twt@localhost:5432/twt?sslmode=disable
           SECRET_KEY: mysecret
           MAX_FILE_SIZE: 30
           REDIS_HOST: localhost:6379
