--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Migrate
         run: go run main.go migrate_up
         env:
-          DB_URI: postgres://root:mysecret@localhost:5432/cdn?sslmode=disable
+          DB_URI: postgres://twt:twt@localhost:5432/twt?sslmode=disable
           SECRET_KEY: mysecret
           MAX_FILE_SIZE: 30
 
