--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     image: postgres:12-alpine
     restart: always
     environment:
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=secret
-      - POSTGRES_DB=cdn
+      - POSTGRES_USER=twt
+      - POSTGRES_PASSWORD=twt
+      - POSTGRES_DB=twt
   
   redis:
     image: redis:6.2
@@ -21,7 +21,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - DB_URI=postgres://root:secret@postgres:5432/cdn?sslmode=disable
+      - DB_URI=postgres://twt:twt@postgres:5432/twt?sslmode=disable
       - SECRET_KEY=mysecret # make sure to keep the same secret key in the jwt issuer
       - MAX_FILE_SIZE=30
       - REDIS_HOST=redis:6379
