--- a/.dockerignore
+++ b/.dockerignore
@@ -19,3 +19,36 @@
 .idea/
 heap.tar.gz
 profile.tar.gz
+
+dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
+# testing
+/coverage
+
+# production
+# /build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
+.eslintcache
+.env
+*Dockerfile*
